--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,12 +7,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-    <style>
-        @font-face {
-            font-family:'GOT';
-            src: url(./src/fonts/GOT/GOT.ttf);
-        }
-    </style>
+    <link rel="stylesheet" href="./src/css/reset.css">
+    <link rel="stylesheet" href="./src/css/estilos.css">
+    <link rel="stylesheet" href="./src/css/reponsivo.css">
 </head>
 <body>
     <main>
@@ -27,7 +24,7 @@
         </div>
         <div class="conteudo">
             <div class="informacoes ativa">
-                <h1 style="font-family: 'GOT';">Balerion</h1>
+                <h1>Balerion</h1>
                 <p class="descricao"> Balerion, chamado de Terror Negro, foi um dragão da Casa Targaryen. Ele foi montado pelo rei Aegon I Targaryen durante a Guerra da Conquista.
                 </p>
             </div>
@@ -84,5 +81,6 @@
             </div>
         </div>
     </main>
+    <script src="./src/js/index.js"></script>
 </body>
 </html>
